--- a/src/assets/components/_header.scss
+++ b/src/assets/components/_header.scss
@@ -1,8 +1,9 @@
 .header {
-    background: hsl(0 0% 0% /0.5);
+    background: transparent;
 
     &__logo {
         font-size: 32px;
+        color: $black; //change to white
         font-weight: 900;
     }
 
@@ -10,6 +11,16 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        padding-left: 40px;
+        padding-right: 40px;
+        max-width: 1440px;
+        margin-left: auto;
+        margin-right: auto;
+
+        @include mq($until: lg) {
+            padding-left: 25px;
+            padding-right: 25px;
+        }
     }
 
     &__nav {
@@ -19,39 +30,19 @@
         list-style: none;
         padding: 0;
         margin: 0;
-
-        a {
-            text-decoration: none;
-
-            &>[aria-hidden="true"] {
-                font-weight: 700;
-                margin-inline-end: 0.75em;
-            }
-        }
-
-        @include mq($until: 55em) {
-            & a>span[aria-hidden] {
-                display: none;
-            }
-        }
-
-        @media (min-width: 35em) {
-            & {
-                --gap: clamp(1.5rem, 5vw, 3rem);
-                padding-block: 2rem;
-                padding-inline: clamp(3rem, 10vw, 10rem);
-            }
-        }
+        padding-top: 20px;
+        padding-bottom: 20px;
 
         @include mq($until: lg) {
 
             position: fixed;
             z-index: 1000;
-            inset: 0 0 0 30%;
-
+            top: 0;
+            left: 30%;
+            bottom: 0;
+            right: 0;
             flex-direction: column;
             padding: min(30vh, 10rem) 2rem;
-
             transform: translateX(100%);
             transition: transform 0.3s ease-out;
 
@@ -59,57 +50,29 @@
                 transform: translateX(0%);
             }
         }
-    }
 
-    &__nav {
-        display: flex;
-    }
+        li {
+            margin-right: 24px;
 
-    .sr-only {
-        border: 0;
-        height: 0;
-        width: 0;
-        margin: 0;
-        padding: 0;
-        font-size: 0;
-        overflow: hidden;
-        white-space: nowrap;
-        position: relative;
-        float: left;
-    }
+            &:last-child {
+                margin-right: 0;
+            }
+        }
 
-    .flex {
-        display: flex;
-        gap: var(--gap, 1rem);
-    }
+        &-link {
+            color: $black; //change to white
+            text-decoration: none;
 
-    .text-white {
-        color: var(--white);
+            .active & {
+                color: $primary;
+            }
+        }
     }
-
-    .letter-spacing-2 {
-        letter-spacing: 2px;
-    }
-
-    .uppercase {
-        text-transform: uppercase;
-    }
-
-    /* Primary Header */
-    .logo {
-        margin: 1rem;
-        object-fit: cover;
-        width: 50px;
-    }
-
-    .primary-header {
-        align-items: center;
-        justify-content: space-between;
-    }
-
 }
 
 .hamburger {
+    border: none;
+
     &__wrapper {
         display: none;
 
