--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -16,6 +16,19 @@
 @import 'components/header';
 
 
+.sr-only {
+    border: 0;
+    height: 0;
+    width: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 0;
+    overflow: hidden;
+    white-space: nowrap;
+    position: relative;
+    float: left;
+}
+
 .container {
     padding-left: 20px;
     padding-right: 20px;
@@ -24,4 +37,11 @@
         padding-left: 25px;
         padding-right: 25px;
     }
+}
+
+.btn-primary {
+    background-color: $primary;
+    border-color: $primary;
+    padding: 16px 34px 18px;
+    font-size: 15px;
 }
