--- a/src/assets/utils/_reboot.scss
+++ b/src/assets/utils/_reboot.scss
@@ -1,12 +1,36 @@
-button {
-    background-color: $primary;
+button,
+.btn {
+    -webkit-appearance: none;
+    appearance: none;
+    border-radius: 0;
     outline: none;
-    border: none;
+    background: none;
+    text-align: inherit;
+    font-size: 14px;
+    display: inline-flex;
+    align-items: center;
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 50px;
+    transition: $transition-button;
+    text-decoration: none;
+    cursor: pointer;
+    font-family: Montserrat, Helvetica, Arial, sans-serif;
+    font-weight: 700;
+    text-align: center;
+    line-height: 1.2;
+    will-change: transform, border-color, background-color, color;
+    padding: 12px 26px 14px;
+    position: relative;
 
     &:active,
     &:focus {
         outline: none;
         border: none;
+    }
+
+    &:hover {
+        transform: scale(1.05);
     }
 }
 
@@ -16,4 +40,10 @@ a {
 
 body {
     font-family: Montserrat, Helvetica, Arial, sans-serif;
+}
+
+p {
+    &:last-child {
+        margin-bottom: 0;
+    }
 }
