--- a/src/assets/utils/_variables.scss
+++ b/src/assets/utils/_variables.scss
@@ -15,3 +15,4 @@ $theme-colors: (
 
 // Transition
 $transition-default: all 400ms, 400ms ease;
+$transition-button: all .25s cubic-bezier(0, 0, .21, .9);
