--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -4,6 +4,7 @@
 // Utils
 @import 'utils/variables';
 @import 'fonts/Montserrat/stylesheet.css';
+@import 'fonts/Icon/style.css';
 
 // vendors
 @import '/node_modules/bootstrap/scss/bootstrap.scss';
@@ -14,6 +15,7 @@
 
 // Components
 @import 'components/header';
+@import 'components/footer';
 
 
 .sr-only {
@@ -30,8 +32,13 @@
 }
 
 .container {
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 40px;
+    padding-right: 40px;
+
+    @include mq($from: 1440px) {
+        padding-left: 100px;
+        padding-right: 100px;
+    }
 
     @include mq($until: lg) {
         padding-left: 25px;
@@ -44,4 +51,17 @@
     border-color: $primary;
     padding: 16px 34px 18px;
     font-size: 15px;
+}
+
+.btn-secondary {
+    border-color: $dark-green;
+    color: $dark-green;
+}
+
+.subheading {
+    font-size: 22px;
+}
+
+h2 {
+    font-weight: 700;
 }
