--- a/src/assets/utils/_variables.scss
+++ b/src/assets/utils/_variables.scss
@@ -16,3 +16,4 @@ $theme-colors: (
 // Transition
 $transition-default: all 400ms, 400ms ease;
 $transition-button: all .25s cubic-bezier(0, 0, .21, .9);
+$transition-effect-cubic: .25s cubic-bezier(0, 0, .21, .9);
