--- a/src/assets/components/_header.scss
+++ b/src/assets/components/_header.scss
@@ -1,5 +1,12 @@
 .header {
-    background: transparent;
+    background: $white;
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    z-index: 99;
+    border-bottom: 1px solid #f4f4f5;
 
     &__logo {
         font-size: 32px;
