--- a/src/assets/fonts/Icon/style.css
+++ b/src/assets/fonts/Icon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?4u8spx');
-  src:  url('fonts/icomoon.eot?4u8spx#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?4u8spx') format('truetype'),
-    url('fonts/icomoon.woff?4u8spx') format('woff'),
-    url('fonts/icomoon.svg?4u8spx#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?l2frvs');
+  src:  url('fonts/icomoon.eot?l2frvs#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?l2frvs') format('truetype'),
+    url('fonts/icomoon.woff?l2frvs') format('woff'),
+    url('fonts/icomoon.svg?l2frvs#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-location:before {
+  content: "\e908";
+}
+.icon-sms:before {
+  content: "\e909";
+}
 .icon-netlify:before {
   content: "\e907";
 }
