Add : terms & conditions page

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -25,6 +25,9 @@
 @import 'components/faq-shortcut';
 @import 'components/cta';
 
+// Pages
+@import 'pages/text';
+
 .sr-only {
     border: 0;
     height: 0;
