--- a/src/assets/components/_header.scss
+++ b/src/assets/components/_header.scss
@@ -9,9 +9,12 @@
     border-bottom: 1px solid #f4f4f5;
 
     &__logo {
-        font-size: 32px;
-        color: $black; //change to white
-        font-weight: 900;
+        a {
+            text-decoration: none;
+            color: $black; //change to white
+            font-weight: 900;
+            font-size: 32px;
+        }
     }
 
     &__wrapper {
