Add : product page

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -24,10 +24,14 @@
 @import 'components/contact-form';
 @import 'components/faq-shortcut';
 @import 'components/cta';
+@import 'components/card';
+@import 'components/review-slider';
+@import 'components/step';
 
 // Pages
 @import 'pages/contact';
 @import 'pages/text';
+@import 'pages/product';
 
 .sr-only {
     border: 0;
@@ -60,6 +64,9 @@
 .btn-primary {
     background-color: $primary;
     border-color: $primary;
+}
+
+.btn-lead {
     padding: 16px 34px 18px;
     font-size: 15px;
 }
@@ -67,6 +74,29 @@
 .btn-secondary {
     border-color: $dark-green;
     color: $dark-green;
+}
+
+.btn-arrow {
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+
+    &::after {
+        content: "\e90b";
+        position: absolute;
+        right: 0;
+        color: $dark-green;
+        font-weight: 700;
+        font-size: 14px;
+        font-family: 'icomoon' !important;
+        font-style: normal;
+        font-weight: normal;
+        font-variant: normal;
+        text-transform: none;
+        line-height: 1;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+    }
 }
 
 .subheading {
