--- a/src/assets/fonts/Icon/style.css
+++ b/src/assets/fonts/Icon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?l2frvs');
-  src:  url('fonts/icomoon.eot?l2frvs#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?l2frvs') format('truetype'),
-    url('fonts/icomoon.woff?l2frvs') format('woff'),
-    url('fonts/icomoon.svg?l2frvs#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?l0ws4o');
+  src:  url('fonts/icomoon.eot?l0ws4o#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?l0ws4o') format('truetype'),
+    url('fonts/icomoon.woff?l0ws4o') format('woff'),
+    url('fonts/icomoon.svg?l0ws4o#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,15 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-next:before {
+  content: "\e90b";
+}
+.icon-prev:before {
+  content: "\e90c";
+}
+.icon-star:before {
+  content: "\e90a";
+}
 .icon-location:before {
   content: "\e908";
 }
