--- a/src/assets/components/_step.scss
+++ b/src/assets/components/_step.scss
@@ -120,4 +120,10 @@
             font-size: inherit;
         }
     }
+
+    &__button {
+        .btn-lead {
+            margin-right: 20px;
+        }
+    }
 }
