--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -8,6 +8,7 @@
 
 // vendors
 @import '/node_modules/bootstrap/scss/bootstrap.scss';
+@import '/node_modules/swiper/swiper-bundle.css';
 @import 'vendor/mq';
 
 // Reboot
