--- a/src/assets/components/_card.scss
+++ b/src/assets/components/_card.scss
@@ -12,10 +12,19 @@
     }
 
     &__image {
+        position: relative;
+        padding-top: 80.75%;
+        overflow: hidden;
+        background-color: $light-green;
 
         img {
-            max-width: 100%;
-            height: auto;
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             object-fit: cover;
             object-position: center;
         }
