--- a/src/assets/components/_footer.scss
+++ b/src/assets/components/_footer.scss
@@ -49,6 +49,13 @@
 
         &-item {
             margin-right: 30px;
+
+            @include mq($until: lg) {
+
+                &:not(:last-child) {
+                    margin-bottom: 24px;
+                }
+            }
         }
     }
 
@@ -95,12 +102,26 @@
         a {
             color: $black;
         }
+
+        &-item {
+            @include mq($until: lg) {
+
+                &:not(:last-child) {
+                    margin-bottom: 12px;
+                }
+            }
+        }
     }
 
     &__bottom {
         .footer__wrapper-box {
             justify-content: space-between;
             align-items: flex-end;
+
+            @include mq($until: lg) {
+                flex-direction: column-reverse;
+                text-align: center;
+            }
         }
 
         &-item {
@@ -127,6 +148,12 @@
                     margin-right: 8px;
                 }
             }
+
+            @include mq($until: lg) {
+                &:not(:first-child) {
+                    margin-bottom: 12px;
+                }
+            }
         }
     }
 
@@ -138,5 +165,9 @@
 
     a {
         text-decoration: none;
+
+        &:hover {
+            color: $primary;
+        }
     }
 }
