--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -105,13 +105,23 @@
 }
 
 .subheading {
-    font-size: 22px;
+    font-size: 18px;
+
+    @include mq($from: lg) {
+        font-size: 22px;
+    }
+
 }
 
 .subtitle {
     font-size: 14px;
     color: $grey;
     margin-bottom: 4px;
+    text-transform: uppercase;
+
+    @include mq($until: lg) {
+        font-size: 12px;
+    }
 }
 
 h1,
@@ -183,5 +193,10 @@ h3 {
 
     &--tight {
         padding-top: 0;
+    }
+
+    @include mq($until: lg) {
+        padding-top: 40px;
+        padding-bottom: 40px;
     }
 }
