--- a/src/assets/components/_faq-shortcut.scss
+++ b/src/assets/components/_faq-shortcut.scss
@@ -1,7 +1,4 @@
 .faq-shortcut {
-    .subtitle {
-        text-transform: uppercase;
-    }
 
     h3 {
         margin-bottom: 24px;
@@ -14,6 +11,7 @@
     &__lists {
         list-style: none;
 
+
         li {
             border-top: 1px solid #f4f4f5;
             border-bottom: 1px solid #f4f4f5;
@@ -22,6 +20,29 @@
             a {
                 color: $grey;
                 text-decoration: none;
+            }
+        }
+
+        @include mq($until: lg) {
+            padding-left: 0;
+            margin-top: 24px;
+        }
+    }
+
+    &__button {
+        &--mobile {
+            display: block;
+
+            @include mq($from: lg) {
+                display: none;
+            }
+        }
+
+        &--desktop {
+            display: none;
+
+            @include mq($from: lg) {
+                display: block;
             }
         }
     }
