--- a/src/assets/components/_header.scss
+++ b/src/assets/components/_header.scss
@@ -45,6 +45,8 @@
         @include mq($until: lg) {
             padding-left: 25px;
             padding-right: 25px;
+            padding-top: 10px;
+            padding-bottom: 10px;
         }
     }
 
@@ -67,9 +69,10 @@
             bottom: 0;
             right: 0;
             flex-direction: column;
-            padding: min(30vh, 10rem) 2rem;
+            padding: min(35vh, 12rem) 2rem;
             transform: translateX(100%);
             transition: transform 0.3s ease-out;
+            background-color: $white;
 
             &[data-visible="true"] {
                 transform: translateX(0%);
@@ -103,7 +106,8 @@
 
             .header-scroll &,
             .internal-page &,
-            &.btn-primary {
+            &.btn-primary,
+            [data-visible="true"] & {
                 color: $black;
             }
 
@@ -136,29 +140,33 @@
 
         @include mq($until: lg) {
             display: block;
-            position: absolute;
+            position: relative;
             z-index: 9999;
             border: 0;
-            width: 2rem;
-            top: 2rem;
-            right: 2rem;
+            width: 1.5rem;
+            top: 5px;
+            right: 25px;
         }
     }
 
-    width: 60px;
-    height: 45px;
+    width: 40px;
+    height: 35px;
     position: relative;
     transform: rotate(0deg);
     transition: $transition-default;
     cursor: pointer;
 
+    &:hover {
+        transform: none;
+    }
+
     span {
         display: block;
         position: absolute;
-        height: 2px;
+        height: 3px;
         width: 100%;
-        background: #d3531a;
-        border-radius: 9px;
+        background: $primary;
+        border-radius: 12px;
         opacity: 1;
         left: 0;
         transform: rotate(0deg);
@@ -170,11 +178,11 @@
 
         &:nth-child(2),
         &:nth-child(3) {
-            top: 18px;
+            top: 14px;
         }
 
         &:nth-child(4) {
-            top: 36px;
+            top: 28px;
         }
 
     }
@@ -182,7 +190,7 @@
     &[aria-expanded="true"] {
         span {
             &:nth-child(1) {
-                top: 18px;
+                top: 14px;
                 width: 0%;
                 left: 50%;
             }
@@ -196,7 +204,7 @@
             }
 
             &:nth-child(4) {
-                top: 18px;
+                top: 14px;
                 width: 0%;
                 left: 50%;
             }
