--- a/src/assets/components/_partner.scss
+++ b/src/assets/components/_partner.scss
@@ -1,5 +1,5 @@
 .partner {
-    background-color: $dark-green;
+    background-color: $light-green;
 
     &__wrapper {
         .row {
@@ -9,10 +9,7 @@
         .swiper {
             &-wrapper {
                 justify-content: center;
-
-                @include mq($until: lg) {
-                    // justify-content: flex-start;
-                }
+                align-items: center;
             }
         }
     }
@@ -23,21 +20,20 @@
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 40px;
-        color: $white;
-
-        .subtitle {
-            color: $white;
-        }
     }
 
     &__logo {
         text-align: center;
         margin-bottom: 24px;
 
-        img {
-            width: 60px;
+        svg {
+            width: 100px;
+            height: auto;
             object-fit: contain;
-            filter: grayscale(0.5);
+
+            @include mq($until: lg) {
+                width: 80px;
+            }
         }
     }
 }
