--- a/src/assets/components/_header.scss
+++ b/src/assets/components/_header.scss
@@ -73,16 +73,25 @@
             transform: translateX(100%);
             transition: transform 0.3s ease-out;
             background-color: $white;
+            border-left: 2px solid #f4f4f5;
 
             &[data-visible="true"] {
                 transform: translateX(0%);
             }
         }
 
+        @include mq($from: md, $until: lg) {
+            padding: 28rem 2rem;
+        }
+
         li {
             margin-right: 24px;
 
             &:last-child {
+                margin-right: 0;
+            }
+
+            @include mq($until: lg) {
                 margin-right: 0;
             }
         }
@@ -92,6 +101,11 @@
             text-decoration: none;
             transition: $transition-default;
             position: relative;
+
+            @include mq($until: lg) {
+                font-size: 20px;
+                font-weight: 700;
+            }
 
             &:not(.btn-primary) {
                 &::before {
