--- a/src/assets/components/_review-slider.scss
+++ b/src/assets/components/_review-slider.scss
@@ -21,7 +21,7 @@
                 opacity: 1;
             }
 
-            @include mq($until: lg) {
+            @include mq($until: md) {
                 & {
                     opacity: 0.3;
                 }
