--- a/src/assets/components/_text-media.scss
+++ b/src/assets/components/_text-media.scss
@@ -11,11 +11,9 @@
                 }
             }
 
-            @include mq($until: lg) {
+            @include mq($until: md) {
                 .text-media--left & {
-                    @include mq($until: lg) {
-                        flex-direction: column-reverse;
-                    }
+                    flex-direction: column-reverse;
                 }
             }
 
@@ -27,11 +25,27 @@
             }
 
         }
+
+        .swiper {
+            &-wrapper {
+                align-items: center;
+            }
+        }
     }
+
 
     &__description {
         @include mq($until: lg) {
             margin-bottom: 24px;
+        }
+    }
+
+    &__image {
+        position: relative;
+        padding-top: 70%;
+
+        img {
+            @include img-ratio()
         }
     }
 }
