--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -5,6 +5,7 @@
 @import 'utils/variables';
 @import 'fonts/Montserrat/stylesheet.css';
 @import 'fonts/Icon/style.css';
+@import 'utils/mixins';
 
 // vendors
 @import '/node_modules/bootstrap/scss/bootstrap.scss';
@@ -85,6 +86,7 @@
     align-items: center;
     color: $dark-green;
     padding-left: 0;
+    text-align: left;
 
     &::after {
         content: "\e90b";
@@ -183,7 +185,7 @@ h3 {
     img {
         border-radius: 32px;
         max-width: 100%;
-        height: auto;
+        height: 100%;
     }
 }
 
