Update : banner & contact spacing

--- a/src/assets/components/_card-icon.scss
+++ b/src/assets/components/_card-icon.scss
@@ -8,7 +8,7 @@
                 margin-right: -30px;
             }
 
-            .col-md-3 {
+            .col {
                 @include mq($from: xl) {
                     padding-left: 30px;
                     padding-right: 30px;
