Add : sal animation transition

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -11,6 +11,7 @@
 @import '/node_modules/bootstrap/scss/bootstrap.scss';
 @import '/node_modules/swiper/swiper-bundle.css';
 @import 'vendor/mq';
+@import '/node_modules/sal.js/dist/sal.css';
 
 // Reboot
 @import 'utils/reboot';
